--- a/pages/css/schedule.css
+++ b/pages/css/schedule.css
@@ -89,3 +89,20 @@ body {
     font-size: 1.2rem;
     color: #6c757d;
   }
+
+  .find-max-btn {
+    margin-top: 20px;
+    padding: 10px 20px;
+    font-size: 16px;
+    background-color: #007bff;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+  }
+  
+  .find-max-btn:hover {
+    background-color: #0056b3;
+  }
+  
