--- a/pages/css/view-list.css
+++ b/pages/css/view-list.css
@@ -2,63 +2,77 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #f8f9fa;
     color: #343a40;
+    line-height: 1.6;
+    background: linear-gradient(to bottom, #eaedea, #a6d1a6);
+    height: 100vh;
+
 }
 
 h1 {
     text-align: center;
     padding: 20px;
     margin: 0;
-    background-color: #007bff;
+    background-color: #5c925d;
     color: white;
-    font-size: 2rem;
+    font-size: 30px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
 }
 
 .container {
     max-width: 800px;
-    margin: 20px auto;
-    padding: 20px;
+    margin: 40px auto;
+    padding: 30px;
     background: white;
-    border-radius: 10px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    border-radius: 5px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
 }
 
 table {
     width: 100%;
     border-collapse: collapse;
     margin-top: 20px;
+    border-radius: 5px;
+    overflow: hidden;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
 thead {
-    background-color: #007bff;
+    background-color: #6f9c70;
     color: white;
 }
 
-th, td {
+th,
+td {
     text-align: center;
     padding: 12px;
     border: 1px solid #dee2e6;
+    padding: 16px;
 }
 
 tbody tr:hover {
-    background-color: #f1f1f1;
+    background-color: #f8f9fa;
     cursor: pointer;
+    transition: background-color 0.3s ease
 }
 
-.back-button {
-    margin-bottom: 20px;
-    padding: 12px 24px;
+.back-button,
+.action-button {
+    display: inline-block;
+    margin: 5px 5px;
+    padding: 12px 14px;
     font-size: 16px;
     cursor: pointer;
-    background-color: #007bff;
+    font-weight: bold;
+    background-color: #6f9c70;
     color: white;
     border: none;
     border-radius: 5px;
     transition: background-color 0.3s ease;
 }
 
-.back-button:hover {
-    background-color: #0056b3;
+.back-button:hover,
+.action-button:hover {
+    background-color: #5c885e;
+    transform: scale(1.05);
 }
