버튼 4 제외 디자인 및 수정

--- a/pages/css/view-list.css
+++ b/pages/css/view-list.css
@@ -4,7 +4,7 @@ body {
     padding: 0;
     color: #343a40;
     line-height: 1.6;
-    background: linear-gradient(to bottom, #eaedea, #a6d1a6);
+    background-color: #f8f9fa;
     height: 100vh;
 
 }
