--- a/pages/css/add-data.css
+++ b/pages/css/add-data.css
@@ -4,65 +4,76 @@ body {
     padding: 0;
     background-color: #f8f9fa;
     color: #343a40;
-  }
+    line-height: 1.5;
+}
 
-  h1 {
+h1 {
     text-align: center;
     padding: 20px;
     margin: 0;
-    background-color: #007bff;
+    background-color: #6f9c70;
     color: white;
     font-size: 2rem;
-  }
+}
 
-  .container {
-    max-width: 800px;
+.container {
+    max-width: 750px;
     margin: 30px auto;
     padding: 20px;
     background: white;
     border-radius: 10px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  }
+}
 
-  label {
+label {
     font-size: 1rem;
     margin-bottom: 5px;
     display: block;
-  }
+}
 
-  input {
-    width: 95%;
+input {
+    width: calc(100% - 20px);
     padding: 10px;
     margin-bottom: 20px;
     border: 1px solid #dee2e6;
     border-radius: 5px;
     font-size: 1rem;
-  }
+}
 
-  table {
+table {
     width: 100%;
     border-collapse: collapse;
-    margin-top: 20px;
-  }
+    margin-top: 15px;
+    font-size: 13px;
+}
 
-  th, td {
+th,
+td {
     border: 1px solid #dee2e6;
     text-align: center;
-    padding: 12px;
-    user-select: none; /* Prevent text selection during drag */
-    cursor: pointer;
-  }
+    padding: 8px;
+}
 
-  th {
+/* 첫 번째 열의 너비 줄이기 */
+th:first-child,
+td:first-child {
+    width: 12%;
+    text-align: center;
+    /* 텍스트 정렬 유지 */
+}
+
+
+th {
     background-color: #f1f1f1;
-  }
+    font-size: 14px;
+}
 
-  td.selected {
-    background-color: #007bff;
+td.selected {
+    background-color: #6f9c70;
     color: white;
-  }
+}
 
-  button {
+button {
     padding: 12px 20px;
     font-size: 16px;
     border: none;
@@ -71,24 +82,26 @@ body {
     display: inline-block;
     text-align: center;
     transition: background-color 0.3s ease;
-  }
+}
 
-  .back-button {
-    background-color: #007bff;
+.back-button {
+    background-color: #6f9c70;
     color: white;
     margin-bottom: 20px;
-  }
+}
 
-  .back-button:hover {
-    background-color: #0056b3;
-  }
+.back-button:hover {
+    background-color: #5c885e;
+}
 
-  .submit-button {
-    background-color: #28a745;
+.submit-button {
+    background-color: #6f9c70;
     color: white;
     margin-top: 20px;
-  }
+}
 
-  .submit-button:hover {
-    background-color: #218838;
-  }
+.submit-button:hover {
+    background-color: #5c885e;
+    transform: scale(1.05);
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
+}
