--- a/pages/css/find.css
+++ b/pages/css/find.css
@@ -2,7 +2,7 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background: linear-gradient(to bottom, #eaedea, #a6d1a6);
+    background-color: #f8f9fa;
     display: flex;
     flex-direction: column;
     align-items: center;
