--- a/pages/css/group-list.css
+++ b/pages/css/group-list.css
@@ -11,7 +11,7 @@ h1 {
     text-align: center;
     padding: 20px;
     margin: 0;
-    background-color: #5c925d;
+    background-color: #6f9c70;
     color: white;
     font-size: 2.5rem;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
@@ -151,4 +151,3 @@ td {
 .view-schedule-btn:hover {
     background-color: #218838;
 }
-
