--- a/pages/css/add-data.css
+++ b/pages/css/add-data.css
@@ -92,6 +92,8 @@ button {
 
 .back-button:hover {
     background-color: #5c885e;
+    transform: scale(1.05);
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
 }
 
 .submit-button {
